--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,4 +9,36 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --background-color: #000028;
+  --page-background-image: url(../images/cover-image-dark.png);
+  --default-color: #ff0070;
+  --accent-color: var(--default-color);
+
+  --decor-color-text: var(--background-color);
+  --decor-color-background: var(--accent-color);
+
+  --header-title: #db00ff;
+  --header-title-shadow: var(--default-color);
+
+  --title-color: var(--default-color);
+  --text-color: #f1b2ce;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    /* Дублируем переменные светлой темы */
+    --background-color: #000028;
+    --page-background-image: url(../images/cover-image-dark.png);
+    --default-color: #ff0070;
+    --accent-color: var(--default-color);
+
+    --decor-color-text: var(--background-color);
+    --decor-color-background: var(--accent-color);
+
+    --header-title: #db00ff;
+    --header-title-shadow: var(--default-color);
+
+    --title-color: var(--default-color);
+    --text-color: #f1b2ce;
+  }
 }
