--- a/styles/style.css
+++ b/styles/style.css
@@ -8,17 +8,38 @@
   font-size: 18px;
   line-height: 24px;
 
-  background-image: url(../images/cover-image-dark.png);
+  background-image: var(--page-background-image);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
+
+  background-color: var(--background-color);
 }
 
-.heading {
+.link {
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+.link:hover {
+  border-bottom: 1px solid var(--text-color);
+}
+
+.title {
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
+
+  color: var(--title-color);
+}
+
+.title-regular {
+  font-weight: 400;
+}
+
+.title-decor {
+  color: var(--decor-color-text);
+  background-color: var(--decor-color-background);
 }
 
 .header {
@@ -36,7 +57,7 @@
     "subtitle";
 }
 
-.header::before {
+.decorated-zone::before {
   content: '';
   position: absolute;
   top: 0;
@@ -45,10 +66,10 @@
   height: 25px;
   border-width: 1px 1px 0 0;
   border-style: solid;
-  border-color: teal;
+  border-color: var(--default-color);
 }
 
-.header::after {
+.decorated-zone::after {
   content: '';
   position: absolute;
   bottom: 0;
@@ -57,7 +78,7 @@
   height: 25px;
   border-width: 0 0 1px 1px;
   border-style: solid;
-  border-color: teal;
+  border-color: var(--default-color);
 }
 
 .header__theme-menu {
@@ -71,15 +92,22 @@
 }
 
 .header__theme-menu-button {
-  padding: 0 13px;
+  padding: 0 13px 3px;
 
   font-size: 18px;
   line-height: 26px;
   text-transform: lowercase;
   vertical-align: middle;
+
+  color: var(--default-color);
 }
 
-.decor::before {
+.header__theme-menu-button_active {
+  outline: 1px solid var(--default-color);
+  pointer-events: none;
+}
+
+.page.theme_dark .decor-rec::before {
   content: 'REC';
 
   font-size: 18px;
@@ -88,9 +116,11 @@
   position: absolute;
   top: 0;
   right: 28px;
+
+  color: var(--default-color);
 }
 
-.decor::after {
+.page.theme_dark .decor-rec::after {
   content: '';
 
   position: absolute;
@@ -100,8 +130,8 @@
   width: 9px;
   height: 9px;
   border-radius: 50%;
-  background-color: teal;
-  box-shadow: 0 0 4px 2px teal;
+  background-color: var(--default-color);
+  box-shadow: 0 0 4px 2px var(--default-color);
 }
 
 .header__title {
@@ -111,7 +141,9 @@
 
   font-size: clamp(7.25rem, 5.7694rem + 6.3174vw, 9.8125rem);
   line-height: clamp(5.9375rem, 4.6735rem + 5.3929vw, 8.125rem);
-  text-shadow: 4px 4px 0 teal;
+  text-shadow: 4px 4px 0 var(--header-title-shadow);
+
+  color: var(--header-title);
 }
 
 .header__subtitle {
@@ -122,7 +154,7 @@
   align-self: center;
   grid-area: subtitle;
 
-  background-color: teal;
+  font-weight: 700;
 }
 
 .main {
@@ -135,7 +167,9 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: auto;
-  grid-gap: 20px;
+  gap: 20px;
+
+  color: var(--text-color);
 }
 
 .card {
@@ -270,34 +304,41 @@
   position: relative;
 }
 
-.footer::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 25px;
-  height: 25px;
-  border-width: 1px 1px 0 0;
-  border-style: solid;
-  border-color: teal;
-}
-
-.footer::after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 25px;
-  height: 25px;
-  border-width: 0 0 1px 1px;
-  border-style: solid;
-  border-color: teal;
-}
-
 .footer-title {
   font-size: clamp(7.25rem, 5.7694rem + 6.3174vw, 9.8125rem);
   line-height: clamp(5.9375rem, 4.6735rem + 5.3929vw, 8.125rem);
-  text-shadow: 2px 2px 0 teal;
+  text-shadow: 2px 2px 0 var(--header-title-shadow);
+
+  color: var(--header-title);
+}
+
+@media (prefers-color-scheme: dark) {
+  .page.theme_auto .decor-rec::before {
+    content: 'REC';
+
+    font-size: 18px;
+    line-height: 26px;
+
+    position: absolute;
+    top: 0;
+    right: 28px;
+
+    color: var(--default-color);
+  }
+
+  .page.theme_auto .decor-rec::after {
+    content: '';
+
+    position: absolute;
+    top: 9px;
+    right: 9px;
+
+    width: 9px;
+    height: 9px;
+    border-radius: 50%;
+    background-color: var(--default-color);
+    box-shadow: 0 0 4px 2px var(--default-color);
+  }
 }
 
 @media (max-width: 768px) {
@@ -348,6 +389,9 @@
 
     display: flex;
     flex-direction: column;
-    row-gap: 10px;
+  }
+
+  .section:has(.picture) {
+    gap: 10px;
   }
 }
