--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
   font-family: var(--main-font, sans-serif);
   font-weight: 400;
   font-size: 18px;
-  line-height: 24px;
+  line-height: 23.3px;
 
   background-image: var(--page-background-image);
   background-repeat: no-repeat;
@@ -43,7 +43,7 @@
 }
 
 .header {
-  margin-bottom: 60px;
+  margin-bottom: 80px;
   height: calc(100vh - var(--global-padding) * 2);
 
   position: relative;
@@ -95,7 +95,7 @@
   padding: 0 13px 3px;
 
   font-size: 18px;
-  line-height: 26px;
+  line-height: 21px;
   text-transform: lowercase;
   vertical-align: middle;
 
@@ -139,8 +139,8 @@
   align-self: center;
   grid-area: title;
 
-  font-size: clamp(7.25rem, 5.7694rem + 6.3174vw, 9.8125rem);
-  line-height: clamp(5.9375rem, 4.6735rem + 5.3929vw, 8.125rem);
+  font-size: 157px;
+  line-height: 130px;
   text-shadow: 4px 4px 0 var(--header-title-shadow);
 
   color: var(--header-title);
@@ -148,7 +148,6 @@
 
 .header__subtitle {
   width: 50%;
-  height: fit-content;
 
   justify-self: end;
   align-self: center;
@@ -165,8 +164,6 @@
   margin-bottom: 80px;
 
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: auto;
   gap: 20px;
 
   color: var(--text-color);
@@ -180,81 +177,50 @@
 
 /* WHY */
 
-.why-title {
-  grid-column: 1 / span 1;
-  grid-row: 1 / span 2;
+.section-why {
+  grid-template-columns: 1fr 2fr;
+  column-gap: 10px;
 }
 
-.why-multitasking {
-  grid-column: 2 / span 2;
-  grid-row: 1 / span 1;
-}
-
-.why-dopamine {
-  grid-column: 2 / span 2;
-  grid-row: 2 / span 1;
+.section-why>.wrapper {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
 }
 
 /* WHAT */
 
-.what-title {
-  grid-column: 1 / span 1;
-  grid-row: 1;
+.section-what>.title {
+  width: 32%;
 }
 
-.what-multitasking {
-  grid-column: 1 / span 1;
-  grid-row: 2 / span 1;
-}
-
-.what-meal {
-  grid-column: 2 / span 1;
-  grid-row: 2 / span 1;
-}
-
-.what-gadgets {
-  grid-column: 3 / span 1;
-  grid-row: 2 / span 1;
+.section-what>.wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-flow: row;
+  column-gap: 20px;
 }
 
 /* HOW */
 
-.how-title {
-  grid-column: 1 / span 1;
-  grid-row: 1 / span 6;
+.section-how {
+  grid-template-columns: 1fr 2fr;
+  column-gap: 10px
 }
 
-.how-title-advice {
-  grid-column: 2 / span 2;
-  grid-row: 1 / span 1;
-}
-
-.how-imagine {
-  grid-column: 2 / span 2;
-  grid-row: 2 / span 1;
-}
-
-.how-music {
-  grid-column: 2 / span 2;
-  grid-row: 3 / span 1;
-}
-
-.how-walk {
-  grid-column: 2 / span 2;
-  grid-row: 4 / span 1;
-}
-
-.how-meal {
-  grid-column: 2 / span 2;
-  grid-row: 5 / span 1;
-}
-
-.how-reading {
-  grid-column: 2 / span 2;
-  grid-row: 6 / span 1;
+.section-how>.wrapper {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
 }
 
 /* PICTURES */
+
+.section-gallery {
+  grid-template-columns: repeat(3, fr);
+  grid-auto-flow: row;
+  gap: 20px;
+}
 
 .pictures-title {
   grid-column: 1 / span 3;
@@ -312,36 +278,7 @@
   color: var(--header-title);
 }
 
-@media (prefers-color-scheme: dark) {
-  .page.theme_auto .decor-rec::before {
-    content: 'REC';
-
-    font-size: 18px;
-    line-height: 26px;
-
-    position: absolute;
-    top: 0;
-    right: 28px;
-
-    color: var(--default-color);
-  }
-
-  .page.theme_auto .decor-rec::after {
-    content: '';
-
-    position: absolute;
-    top: 9px;
-    right: 9px;
-
-    width: 9px;
-    height: 9px;
-    border-radius: 50%;
-    background-color: var(--default-color);
-    box-shadow: 0 0 4px 2px var(--default-color);
-  }
-}
-
-@media (max-width: 768px) {
+@media (max-width: 1023px) {
   .header__theme-menu {
     justify-self: right;
     align-self: center;
@@ -352,22 +289,29 @@
     flex-direction: column;
     row-gap: 10px;
   }
-}
 
-@media (max-width: 1023px) and (min-width: 768px) {
-  .what-multitasking {
-    grid-column: 1 / span 3;
-    grid-row: 2 / span 1;
+  .header__title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    line-height: clamp(6.1875rem, 0.375rem + 12.1094vw, 8.125rem);
   }
 
-  .what-meal {
-    grid-column: 1 / span 3;
-    grid-row: 3 / span 1;
+  .section-why {
+    column-gap: 20px;
   }
 
-  .what-gadgets {
-    grid-column: 1 / span 3;
-    grid-row: 4 / span 1;
+  .section-what>.wrapper {
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+  }
+
+  .section-how {
+    column-gap: 20px;
+  }
+
+  .footer-title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    line-height: clamp(6.1875rem, 0.375rem + 12.1094vw, 8.125rem);
   }
 }
 
@@ -376,12 +320,23 @@
     --global-padding: 10px;
   }
 
+  .header {
+    margin-bottom: 50px;
+  }
+
   .header__title {
     margin-left: 0;
+
+    font-size: clamp(7.25rem, 6.5rem + 1.5625vw, 7.5rem);
+    line-height: clamp(5.9375rem, 5.1875rem + 1.5625vw, 6.1875rem);
   }
 
   .header__subtitle {
     width: 100%;
+  }
+
+  .main {
+    margin-bottom: 50px;
   }
 
   .section {
@@ -389,9 +344,19 @@
 
     display: flex;
     flex-direction: column;
+    row-gap: 20px;
   }
 
-  .section:has(.picture) {
-    gap: 10px;
+  .section-what>.title {
+    width: 100%;
+  }
+
+  .section-gallery {
+    row-gap: 10px;
+  }
+
+  .footer-title {
+    font-size: clamp(7.25rem, 6.5rem + 1.5625vw, 7.5rem);
+    line-height: clamp(5.9375rem, 5.1875rem + 1.5625vw, 6.1875rem);
   }
 }
