fix: исправление отображения декоративного элемента REC

--- a/styles/light.css
+++ b/styles/light.css
@@ -22,6 +22,10 @@
 
   --title-color: var(--default-color);
   --text-color: var(--default-color);
+
+  & .decor-rec {
+    display: none;
+  }
 }
 
 @media (prefers-color-scheme: light) {
@@ -40,5 +44,9 @@
 
     --title-color: var(--default-color);
     --text-color: var(--default-color);
+
+    & .decor-rec {
+      display: none;
+    }
   }
 }
