--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,3 @@
-/* Глобальные стили для проекта, их можно дополнять и менять по желанию */
-
 *,
 *::before,
 *::after {
@@ -64,4 +62,12 @@ button:focus-visible {
 
 button:hover {
   outline: 1px solid color-mix(in srgb, var(--default-color) 40%, transparent);
+}
+
+.link {
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+.link:hover {
+  border-bottom: 1px solid var(--text-color);
 }
