--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,10 @@
-/* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
-
 .page {
   padding: var(--global-padding);
 
   font-family: var(--main-font, sans-serif);
   font-weight: 400;
-  font-size: 18px;
-  line-height: 23.3px;
+  font-size: var(--main-font-size);
+  line-height: var(--main-line-height);
 
   background-image: var(--page-background-image);
   background-repeat: no-repeat;
@@ -17,18 +15,10 @@
   background-color: var(--background-color);
 }
 
-.link {
-  text-shadow: 2px 2px 0 var(--accent-color);
-}
-
-.link:hover {
-  border-bottom: 1px solid var(--text-color);
-}
-
 .title {
   font-weight: 700;
-  font-size: 18px;
-  line-height: 24px;
+  font-size: var(--title-font-size);
+  line-height: var(--title-line-height);
 
   color: var(--title-color);
 }
@@ -49,7 +39,6 @@
   position: relative;
 
   display: grid;
-  grid-template-columns: 1fr;
   grid-template-rows: 1fr auto 1fr;
   grid-template-areas:
     "menu"
@@ -88,16 +77,15 @@
 
 .header__theme-menu-list {
   display: flex;
-  column-gap: 10px;
+  gap: 10px;
 }
 
 .header__theme-menu-button {
   padding: 0 13px 3px;
 
-  font-size: 18px;
-  line-height: 21px;
+  font-size: var(--main-font-size);
+  line-height: var(--main-line-height);
   text-transform: lowercase;
-  vertical-align: middle;
 
   color: var(--default-color);
 }
@@ -110,11 +98,11 @@
 .decor-rec::before {
   content: 'REC';
 
-  font-size: 18px;
-  line-height: 26px;
+  font-size: var(--main-font-size);
+  line-height: var(--main-line-height);
 
   position: absolute;
-  top: 0;
+  top: 2px;
   right: 28px;
 
   color: var(--default-color);
@@ -136,11 +124,12 @@
 
 .header__title {
   margin-left: calc(var(--global-padding) * -1);
+
   align-self: center;
   grid-area: title;
 
-  font-size: 157px;
-  line-height: 130px;
+  font-size: var(--header-title-font-size);
+  line-height: var(--header-title-line-height);
   text-shadow: 4px 4px 0 var(--header-title-shadow);
 
   color: var(--header-title);
@@ -163,7 +152,8 @@
 .section {
   margin-bottom: 80px;
 
-  display: grid;
+  display: flex;
+  flex-direction: column;
   gap: 20px;
 
   color: var(--text-color);
@@ -176,55 +166,52 @@
 }
 
 /* WHY */
-
 .section-why {
-  grid-template-columns: 1fr 2fr;
-  column-gap: 10px;
+  flex-direction: row;
+}
+
+.section-why>.title {
+  flex: .9;
 }
 
 .section-why>.wrapper {
+  flex: 2.1;
+
   display: flex;
   flex-direction: column;
-  row-gap: 20px;
+  gap: 20px;
 }
 
 /* WHAT */
-
 .section-what>.title {
   width: 32%;
 }
 
 .section-what>.wrapper {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-flow: row;
-  column-gap: 20px;
+  display: flex;
+  gap: 20px;
 }
 
 /* HOW */
-
 .section-how {
-  grid-template-columns: 1fr 2fr;
-  column-gap: 10px
+  flex-direction: row;
+}
+
+.section-how>.title {
+  flex: .9;
 }
 
 .section-how>.wrapper {
   display: flex;
   flex-direction: column;
-  row-gap: 20px;
+  gap: 20px;
+  flex: 2.1;
 }
 
 /* PICTURES */
-
 .section-gallery {
-  grid-template-columns: repeat(3, fr);
-  grid-auto-flow: row;
+  display: grid;
   gap: 20px;
-}
-
-.pictures-title {
-  grid-column: 1 / span 3;
-  grid-row: 1;
 }
 
 .picture {
@@ -235,27 +222,27 @@
 
 .picture-sunset {
   grid-column: 1 / span 2;
-  grid-row: 2 / span 1;
+  grid-row: 1 / span 1;
 }
 
 .picture-ice-cream {
   grid-column: 3 / span 1;
-  grid-row: 2 / span 2;
+  grid-row: 1 / span 2;
 }
 
 .picture-tape {
   grid-column: 1 / span 1;
-  grid-row: 3 / span 2;
+  grid-row: 2 / span 2;
 }
 
 .picture-books {
   grid-column: 2 / span 1;
-  grid-row: 3 / span 1;
+  grid-row: 2 / span 1;
 }
 
 .picture-street {
   grid-column: 2 / span 2;
-  grid-row: 4 / span 1;
+  grid-row: 3 / span 1;
 }
 
 /* FOOTER */
@@ -271,14 +258,19 @@
 }
 
 .footer-title {
-  font-size: clamp(7.25rem, 5.7694rem + 6.3174vw, 9.8125rem);
-  line-height: clamp(5.9375rem, 4.6735rem + 5.3929vw, 8.125rem);
+  font-size: var(--header-title-font-size);
+  line-height: var(--header-title-line-height);
   text-shadow: 2px 2px 0 var(--header-title-shadow);
 
   color: var(--header-title);
 }
 
 @media (max-width: 1023px) {
+  :root {
+    --header-title-font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    --header-title-line-height: clamp(6.1875rem, 0.375rem + 12.1094vw, 8.125rem);
+  }
+
   .header__theme-menu {
     justify-self: right;
     align-self: center;
@@ -287,37 +279,18 @@
   .header__theme-menu-list {
     display: flex;
     flex-direction: column;
-    row-gap: 10px;
-  }
-
-  .header__title {
-    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-    line-height: clamp(6.1875rem, 0.375rem + 12.1094vw, 8.125rem);
-  }
-
-  .section-why {
-    column-gap: 20px;
   }
 
   .section-what>.wrapper {
-    display: flex;
     flex-direction: column;
-    row-gap: 20px;
-  }
-
-  .section-how {
-    column-gap: 20px;
-  }
-
-  .footer-title {
-    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-    line-height: clamp(6.1875rem, 0.375rem + 12.1094vw, 8.125rem);
   }
 }
 
 @media (max-width: 767px) {
-  .page {
-    --global-padding: 10px;
+  :root {
+    --global-padding: clamp(0.625rem, 0.0286rem + 2.5445vw, 1.25rem);
+    --header-title-font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+    --header-title-line-height: clamp(5.9375rem, 5.699rem + 1.0178vw, 6.1875rem);
   }
 
   .header {
@@ -326,9 +299,6 @@
 
   .header__title {
     margin-left: 0;
-
-    font-size: clamp(7.25rem, 6.5rem + 1.5625vw, 7.5rem);
-    line-height: clamp(5.9375rem, 5.1875rem + 1.5625vw, 6.1875rem);
   }
 
   .header__subtitle {
@@ -341,22 +311,36 @@
 
   .section {
     margin-bottom: 50px;
+    gap: clamp(0.625rem, 0.0286rem + 2.5445vw, 1.25rem);
+  }
 
-    display: flex;
+  .section-why {
     flex-direction: column;
-    row-gap: 20px;
+  }
+
+  .section-why>.wrapper {
+    gap: clamp(0.625rem, 0.0286rem + 2.5445vw, 1.25rem);
   }
 
   .section-what>.title {
     width: 100%;
   }
 
-  .section-gallery {
-    row-gap: 10px;
+  .section-what>.wrapper {
+    gap: clamp(0.625rem, 0.0286rem + 2.5445vw, 1.25rem);
   }
 
-  .footer-title {
-    font-size: clamp(7.25rem, 6.5rem + 1.5625vw, 7.5rem);
-    line-height: clamp(5.9375rem, 5.1875rem + 1.5625vw, 6.1875rem);
+  .section-how {
+    flex-direction: column;
+  }
+
+  .section-how>.wrapper {
+    gap: clamp(0.625rem, 0.0286rem + 2.5445vw, 1.25rem);
+  }
+
+  .section-gallery {
+    display: flex;
+    flex-direction: column;
+    gap: clamp(0.625rem, 0.0286rem + 2.5445vw, 1.25rem);
   }
 }
