--- a/styles/style.css
+++ b/styles/style.css
@@ -35,6 +35,7 @@
 .header {
   margin-bottom: 80px;
   height: calc(100vh - var(--global-padding) * 2);
+  min-height: calc(668px - var(--global-padding) * 2);
 
   position: relative;
 
@@ -249,6 +250,7 @@
 
 .footer {
   height: calc(100vh - var(--global-padding) * 2);
+  min-height: calc(668px - var(--global-padding) * 2);
 
   display: flex;
   justify-content: center;
