--- a/styles/style.css
+++ b/styles/style.css
@@ -160,10 +160,12 @@
   color: var(--text-color);
 }
 
-.card {
-  display: flex;
-  flex-direction: column;
-  row-gap: 10px;
+.card> :first-child {
+  margin-block-end: 10px;
+}
+
+.card> :not(:first-child, :last-child) {
+  margin-block-end: 10px;
 }
 
 /* WHY */
@@ -172,11 +174,11 @@
 }
 
 .section-why>.title {
-  flex: .9;
+  flex: 1;
 }
 
 .section-why>.wrapper {
-  flex: 2.1;
+  flex: 2;
 
   display: flex;
   flex-direction: column;
